--- a/admin/src/main/resources/shardingsphere-config.yaml
+++ b/admin/src/main/resources/shardingsphere-config.yaml
@@ -21,6 +21,12 @@ rules:
             shardingColumn: username
             # 分片算法，对应 rules[0].shardingAlgorithms
             shardingAlgorithmName: user_table_hash_mod
+      t_group:
+        actualDataNodes: ds_0.t_group_${0..15}
+        tableStrategy:
+          standard:
+            shardingColumn: username
+            shardingAlgorithmName: group_table_hash_mod
     # 分片算法
     shardingAlgorithms:
       # 数据表分片算法
@@ -28,6 +34,10 @@ rules:
         # 根据分片键 Hash 分片
         type: HASH_MOD
         # 分片数量
+        props:
+          sharding-count: 16
+      group_table_hash_mod:
+        type: HASH_MOD
         props:
           sharding-count: 16
   # 数据加密存储规则
