--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -12,3 +12,7 @@ spring:
       host: 127.0.0.1
       port: 6379
       password: TheBestWorkLoanapp1
+  mvc:
+    view:
+      prefix: /templates/
+      suffix: .html
