feature: 开发短链接中台监控系统: 地区访问数据之本地数据

--- a/project/pom.xml
+++ b/project/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>jsoup</artifactId>
             <version>${jsoup.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.lionsoul</groupId>
+            <artifactId>ip2region</artifactId>
+            <version>${ip2region.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
