--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.modelcontextprotocol.sdk</groupId>
+            <artifactId>mcp-spring-webmvc</artifactId>
+            <version>0.11.3</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
