feature: 添加 Docker 支持及部署文档，优化本地开发环境配置

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,19 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Docker & Deployment ###
+logs/
+*.log
+.env
+
+### Local Development ###
+application-local.yaml
+shardingsphere-local.yaml
+
+### Temporary Files ###
+*.tmp
+*.temp
+
+.serena
+.idea
