--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MySQL 数据库服务
   mysql:
@@ -60,10 +58,9 @@ services:
     environment:
       - JAVA_OPTS=${JAVA_OPTS:--Xmx1024m -Xms512m -XX:+UseG1GC -XX:MaxGCPauseMillis=200}
     volumes:
-      - ./logs:/app/logs:rw  # 日志目录挂载
-      # 可选配置文件挂载 - 如果同级目录存在这些文件，将会覆盖镜像内的默认配置
-      - ./application.yaml:/app/application.yaml:ro  # 可选：应用配置
-      - ./shardingsphere-config.yaml:/app/shardingsphere-config.yaml:ro  # 可选：分库分表配置
+      # 自定义配置文件挂载 - 需要确保这些文件存在
+      - ./application.yaml:/app/application.yaml:ro  # 应用配置
+      - ./shardingsphere-config.yaml:/app/shardingsphere-config.yaml:ro  # 分库分表配置
     depends_on:
       mysql:
         condition: service_healthy
